# davinci_raspberrypi

./: .gitignore  1_1_2.py  1_1_5.py  1_2_1.py  1_3_1.py  1_3_2.py  1_3_3.py  2_1_1.py  2_1_3.py  README.md  pyproject.toml  requirements.txt
