[tool.poetry]
name = "davinci_raspberrypi"
version = "0.1.0"
description = ""
authors = ["honeda <50893852+honeda@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.9.2"
"RPi.GPIO" = "0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
